[gd_scene load_steps=4 format=3 uid="uid://8r4dcxm66m3j"]

[ext_resource type="Script" path="res://menus/settings.gd" id="1_qnsfk"]
[ext_resource type="PackedScene" uid="uid://b2rg6aqw3tdmq" path="res://assets/blazium.tscn" id="2_uq1o6"]
[ext_resource type="Script" path="res://menus/general/Autofocus.gd" id="3_l2p4s"]

[node name="Settings" type="PanelContainer" node_paths=PackedStringArray("logs_label", "name_label", "save_button", "left_spacer", "right_spacer")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BgPanel"
script = ExtResource("1_qnsfk")
logs_label = NodePath("HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/Logs")
name_label = NodePath("HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy2/Name")
save_button = NodePath("HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/ButtonSave")
left_spacer = NodePath("HBoxContainer/LeftSpacer")
right_spacer = NodePath("HBoxContainer/RightSpacer")

[node name="Blazium" parent="." instance=ExtResource("2_uq1o6")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="LeftSpacer" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"ContentPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect"]
layout_mode = 2
alignment = 1

[node name="LabelSettings" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Settings"
horizontal_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainerPrivacy2" type="HBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Name:"

[node name="Name" type="LineEdit" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name (required)"
alignment = 1
max_length = 16
script = ExtResource("3_l2p4s")

[node name="Logs" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonDisconnect" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="ButtonSave" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Save"

[node name="ButtonMainMenu" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="RightSpacer" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="text_changed" from="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy2/Name" to="." method="_on_name_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy2/Name" to="." method="_on_name_text_submitted"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/ButtonDisconnect" to="." method="_on_button_disconnect_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
